# airfeeld

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  RELEASE.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
backend/: .gitignore  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  run.py
backend/data/: airfeeld.db-shm  airfeeld.db-wal
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 001_security_tables.py  002_game_tables.py  003_add_moderation_fields.py
backend/scripts/: __init__.py  seed_airports.py  seed_sample_photos.py  seed_test_photos.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/api/: __init__.py  games.py  health.py  leaderboard.py  photos.py  players.py
backend/src/data/: __init__.py
backend/src/middleware/: __init__.py  headers.py  rate_limit.py
backend/src/models/: __init__.py  audit_log.py  base.py  game_round.py  guess.py  photo.py  player.py  pow_challenge.py  rate_limit.py
backend/src/services/: __init__.py  audit_service.py  game_service.py  photo_service.py  player_service.py  pow_service.py  profanity_filter.py  rate_limit_service.py
backend/src/utils/: __init__.py  errors.py  logging.py
backend/src/workers/: __init__.py  moderation.py
backend/tests/: conftest.py
backend/tests/contract/: __init__.py
backend/tests/integration/: __init__.py  test_gameplay.py  test_leaderboard.py  test_registration.py
backend/tests/security/: __init__.py
backend/tests/unit/: test_exif_stripping.py  test_moderation.py  test_pow_service.py  test_profanity_filter.py  test_rate_limit_service.py
docs/: api-reference.md  deployment.md  privacy-policy.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: GameRound.tsx  Layout.tsx  RegisterForm.tsx  index.ts
frontend/src/contexts/: PlayerContext.tsx
scripts/: dev.sh  seed_data.py
specs/001-aviation-games/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-release-preparation/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
storage/cache/: .gitkeep
storage/photos/: .gitkeep
(+12 files in other folders)
